RESOLVED FIXED230872
Fix build with non-internal Monterey SDK
https://bugs.webkit.org/show_bug.cgi?id=230872
Summary Fix build with non-internal Monterey SDK
Alex Christensen
Reported 2021-09-27 18:08:07 PDT
Fix build with non-internal Monterey SDK
Attachments
Patch (6.39 KB, patch)
2021-09-27 18:08 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2021-09-27 18:08:44 PDT
EWS
Comment 2 2021-09-28 09:09:24 PDT
Committed r283171 (242219@main): <https://commits.webkit.org/242219@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439422 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-28 09:10:25 PDT
Note You need to log in before you can comment on or make changes to this bug.