Fix build with non-internal Monterey SDK https://bugs.webkit.org/show_bug.cgi?id=230872

Patch by Alex Christensen <achristensen@webkit.org> on 2021-09-28
Reviewed by Jonathan Bedard.

Source/WebCore:

* platform/mac/PlatformSpeechSynthesizerMac.mm:
(WebCore::speechSynthesisGetDefaultVoiceIdentifierForLocale):

Source/WebCore/PAL:

* pal/spi/cocoa/PassKitSPI.h:
* pal/spi/mac/SystemPreviewSPI.h:

Canonical link: https://commits.webkit.org/242219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283171 268f45cc-cd09-0410-ab3c-d52691b4dbfc